--- a/style.css
+++ b/style.css
@@ -7,6 +7,23 @@ h1 {
     margin: 0;
     /* text-shadow: 2px 2px 4px gray; */
 }
+.title {
+    color: black !important;
+    text-decoration: none !important;
+    cursor: pointer;
+}
+.title:hover {
+    color: black !important;
+    text-decoration: none !important;
+}
+.title:visited {
+    color: black !important;
+    text-decoration: none !important;
+}
+.title:active {
+    color: black !important;
+    text-decoration: none !important;
+}
 
 /* hamburger menu */
 .hamburger-menu {
@@ -69,12 +86,126 @@ h1 {
     color: black;
     font-weight: bold;
     transition: color 0.3s ease;
+    cursor: pointer;
 }
-a:hover {
+.navbar a:hover {
     color: rgb(171, 171, 171);
+}
+.navbar a.active {
+    color: #333;
+    border-bottom: 2px solid #333;
+    padding-bottom: 2px;
+}
+.add-article-link{
+    margin-top: 50vh;
+    margin-left: 1vw;
+    margin-right: 1vw;
+    border: 2px solid #333;
+    padding: 10px;
+    border-radius: 5px;
+}
+
+/* modal */
+.modal {
+    display: none;
+    position: fixed;
+    z-index: 2000;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0,0,0,0.5);
+}
+.modal-content {
+    background-color: #fefefe;
+    margin: 5% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    max-width: 600px;
+    border-radius: 8px;
+    max-height: 80vh;
+    overflow-y: auto;
+}
+.close {
+    color: #aaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+    cursor: pointer;
+}
+.close:hover,
+.close:focus {
+    color: black;
+    text-decoration: none;
+}
+.form-group {
+    margin-bottom: 20px;
+}
+.form-group label {
+    display: block;
+    margin-bottom: 5px;
+    font-weight: bold;
+    color: #333;
+}
+.form-group input,
+.form-group textarea,
+.form-group select {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    font-size: 14px;
+    box-sizing: border-box;
+}
+.form-group textarea {
+    resize: vertical;
+    min-height: 60px;
+}
+.submit-btn {
+    background-color: #333;
+    color: white;
+    padding: 12px 24px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+    font-size: 16px;
+    font-weight: bold;
+}
+.submit-btn:hover {
+    background-color: #555;
+}
+
+/* success/error messages */
+.message {
+    padding: 10px;
+    margin: 10px 0;
+    border-radius: 4px;
+    font-weight: bold;
+}
+.success {
+    background-color: #d4edda;
+    color: #155724;
+    border: 1px solid #c3e6cb;
+}
+.error {
+    background-color: #f8d7da;
+    color: #721c24;
+    border: 1px solid #f5c6cb;
 }
 
 /* articles */
+#recent-articles-container p {
+    align-items: left;
+    font-size: 1.2em;
+    color: black;
+}
+.recent-articles-column:empty::after,
+.small-articles-column:empty::after {
+    content: '';
+    display: block;
+    min-height: 100px;
+}
 .articles{
     display: grid;
     grid-template-columns: 2fr 1fr;
@@ -83,28 +214,47 @@ a:hover {
 .recentDiv{
     display: flex;
     align-items: center;
+    margin-top: 2vw;
+    
     .recentText{
         width: 15vw;
+        min-height: 15vw;
         padding-left: 5vw;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        text-align: left !important;
+    }
+    .recentDescription{
+        margin-top: 0;
+    }
+    .recentAuthor{
+        margin-bottom: 0;
+        font-weight: bold;
+    }
+    .recentDate{
+        margin-top: 0;
     }
     
     h2 {
         font-size: 2vw;
-        margin:0
+        margin: 0 0 0.5vw 0;
+        line-height: 1.2;
+        text-align: left !important;
     }
+    
+    p {
+        font-size: 1vw;
+        line-height: 1.4;
+        text-align: left !important;
+    }
+
     img {
-        width: 45vw
+        width: 45vw;
+        height: auto;
+        object-fit: cover;
     }
-    margin-top: 2vw;
-    p{
-        margin-top: 1vw;
-        margin-bottom: 0
-    }
-
-    .recentDate {
-        margin-top: 0;
-    }
-
+    
     .vertical-line {
         height: 25vw; 
         width: 2px; 
@@ -114,26 +264,41 @@ a:hover {
     }
 }
 .smallDiv{
-    display: flex;
-    align-items: center;
-
-    img{
-        width:10vw;
-        height: 10vw;
-        margin:0.5vw;
-    }
-
-    h2{
-        font-size: 1vw;
-    }
-
-    p{
-        margin: 0.5vw;
-        margin-left: 0vw;
-        font-size: 0.9vw;
-    }
-
+    display: grid;
+    grid-template-columns: 1fr auto;
+    grid-template-areas: "text image";
+    gap: 1vw;
+    align-items: start;
     margin-top: 2vw;
-    padding-right: 5vw
-}
+    padding-right: 5vw;
 
+    p {
+        margin: 0.3vw 0;
+        font-size: 0.9vw;
+        line-height: 1.3;
+    }
+
+    h2 {
+        font-size: 1vw;
+        margin: 0 0 0.5vw 0;
+        line-height: 1.2;
+    }
+    .smallText{
+        grid-area: text;
+        min-height: 10vw;
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+    }
+    img{
+        grid-area: image;
+        width: 10vw;
+        height: 10vw;
+        object-fit: cover;
+        margin: 0;
+    }
+    .smallAuthor {
+        margin-top: auto;
+        font-weight: bold;
+    }
+}
